fGymm 1.5.0, 2016-01-16
------------------------
- FontAwesome update
- Design improvement
- bug fixes

fGymm 1.4.0, 2015-10-11
------------------------
- Full theme rewrite to use customizer instead of a parent theme tkidd

fGymm 1.3.0, 2015-05-23
------------------------
- bug fixes

fGymm 1.0.2, 2015-05-02
------------------------
- small bug fixes

fGymm 1.0.1, 2015-04-17
------------------------
- Fix issue with text domain loading

fGymm 1.0.0, 2014-09-27
------------------------
- Initial release