@@ -5,8 +5,8 @@ Theme URI: https://tishonator.com/product/fgymm
 Author: tishonator
 Author URI: https://tishonator.com
 Text Domain: fgymm
-Version: 1.5.0
-Tags: black, white, green, light, two-columns, right-sidebar, fixed-layout, responsive-layout, custom-background, custom-header, custom-menu, featured-images, post-formats, sticky-post, threaded-comments, translation-ready
+Version: 1.5.1
+Tags: blog, entertainment, two-columns, right-sidebar, custom-background, custom-header, custom-menu, featured-images, post-formats, sticky-post, threaded-comments, translation-ready
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
@@ -351,6 +351,12 @@ span > object {
 
 #sidebar select{
 	max-width:95%;
+}
+
+article,
+aside {
+	-ms-word-wrap: break-word;
+	word-wrap: break-word;
 }
 
 /* main content */
@@ -861,7 +867,7 @@ blockquote, figure {
 	clear:both;
 }
 
-.commentlist li .pingback comment-author {
+.commentlist li .pingback .comment-author {
 	padding:0 170px 0 0;
 }
 
@@ -1374,7 +1380,73 @@ img.wp-post-image {
 	float: left;
 }
 
-/* Responsive Web Design */
+
+
+.gallery {
+	margin: 0 -1.1666667% 1.75em;
+}
+
+.gallery-item {
+	display: inline-block;
+	max-width: 33.33%;
+	padding: 0 1.1400652% 2.2801304%;
+	text-align: center;
+	vertical-align: top;
+	width: 100%;
+}
+
+.gallery-columns-1 .gallery-item {
+	max-width: 50%;
+}
+
+.gallery-columns-3 .gallery-item {
+	max-width: 25%;
+}
+
+.gallery-columns-4 .gallery-item {
+	max-width: 20%;
+}
+
+.gallery-columns-5 .gallery-item {
+	max-width: 16.66%;
+}
+
+.gallery-columns-6 .gallery-item {
+	max-width: 14.28%;
+}
+
+.gallery-columns-7 .gallery-item {
+	max-width: 12.5%;
+}
+
+.gallery-columns-8 .gallery-item {
+	max-width: 11.11%;
+}
+
+.gallery-columns-9 .gallery-item {
+	max-width: 10.11%;
+}
+
+.gallery-icon img {
+	margin: 0 auto;
+}
+
+.gallery-caption {
+	color: #686868;
+	display: block;
+	font-size: 13px;
+	font-size: 0.8125rem;
+	font-style: italic;
+	line-height: 1.6153846154;
+	padding-top: 0.5384615385em;
+}
+
+.gallery-columns-6 .gallery-caption,
+.gallery-columns-7 .gallery-caption,
+.gallery-columns-8 .gallery-caption,
+.gallery-columns-9 .gallery-caption {
+	display: none;
+}
 
 /* Large Resolution */
 @media screen and (min-width: 800px) {
